// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init Git deps is right 1`] = `
Array [
  "@types/jest",
  "eslint",
  "eslint-config-prettier",
  "eslint-plugin-jest",
  "eslint-plugin-prettier",
  "jest",
  "prettier",
  "husky",
]
`;

exports[`select framework Koa deps is right 1`] = `
Array [
  "@types/jest",
  "eslint",
  "eslint-config-prettier",
  "eslint-plugin-jest",
  "eslint-plugin-prettier",
  "jest",
  "prettier",
  "nodemon",
  "husky",
  "@koa/cors",
  "@koa/router",
  "koa",
  "koa-bodyparser",
  "winston",
  "winston-daily-rotate-file",
  "chalk",
]
`;

exports[`select framework None deps is right 1`] = `
Array [
  "@types/jest",
  "eslint",
  "eslint-config-prettier",
  "eslint-plugin-jest",
  "eslint-plugin-prettier",
  "jest",
  "prettier",
  "husky",
]
`;
